cmake_minimum_required(VERSION 3.15)
project(22s_pa02)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS_RELEASE -O3)

set(1 data/size100/100-60ascending_noDup.txt)
set(2 data/size100/100-random_20Dup.txt)
set(3 data/size100/100-random_40Dup.txt)
set(4 data/size1000/1000-60ascending_noDup.txt)
set(5 data/size1000/1000-random_20Dup.txt)
set(6 data/size1000/1000-random_40Dup.txt)
set(7 data/size10000/10000-60ascending_noDup.txt)
set(8 data/size10000/10000-random_20Dup.txt)
set(9 data/size10000/10000-random_40Dup.txt)
set(10 data/size50000/50000-60ascending_noDup.txt)
set(11 data/size50000/50000-random_20Dup.txt)
set(12 data/size50000/50000-random_40Dup.txt)
set(13 data/size100000/100000-60ascending_noDup.txt)
set(14 data/size100000/100000-random_20Dup.txt)
set(15 data/size100000/100000-random_40Dup.txt)
set(16 data/size500000/500000-60ascending_noDup.txt)
set(17 data/size500000/500000-random_20Dup.txt)
set(18 data/size500000/500000-random_40Dup.txt)
set(19 data/size1mil/60ascending_noDup.txt)
set(20 data/size1mil/random_20Dup.txt)
set(21 data/size1mil/random_40Dup.txt)
set(22 data/size1mil/ascending_noDup.txt)
set(23 data/size1mil/random_noDup.txt)

foreach(file IN LISTS 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23)
    configure_file(${file} ${file} COPYONLY)
endforeach()

add_executable(pa02 src/main.cpp src/Runner.cpp src/Profiler.h src/Sort.h src/SelectionSort.h src/InsertionSort.h
        src/QuickSort.h src/TestSort.h src/ShellSort.h src/MergeSort.h src/IntroSort.h src/TimSort.h)
add_executable(pa02_test src/catch_setup.cpp src/test.cpp src/Sort.h)

